<resources>
    <string name="app_name">Identicon</string>

    <!-- menu -->
    <string name="refresh">Refresh</string>
    <string name="controls">Controls</string>

    <!-- buttons -->
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="resetToDefault">Reset to Default</string>
    <string name="cancel">Cancel</string>

    <!-- labels -->
    <string name="fileLocation">File saved at : %s</string>
    <string name="borderSize">Border Size</string>
    <string name="numberOfBlocks">Number of Blocks</string>
    <string name="imageSize">Image Size</string>
    <string name="sizePx">%d px</string>

    <!-- dialogs -->
    <string name="need_storage_permission">Need Storage Permission</string>
    <string name="give_permission">Give Permission</string>

    <!-- toasts -->
    <string name="give_permission_toast">Give permission to save file</string>
    <string name="error_sharing">Error! Could\'nt share file</string>

</resources>
